# GitPython

./: .appveyor.yml  .codeclimate.yml  .coveragerc  .deepsource.toml  .dockerignore  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.private-ssh-key-for-issue-301  .travis.yml  AUTHORS  CHANGES  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  SECURITY.md  TODO  VERSION  ab.diff  build-release.sh  check-version.sh  dev-requirements.txt  diff.py  dockernose.sh  errors.txt  et --soft HEAD~62  exc.py  ez_setup.py  file1  init-tests-after-clone.sh  modattrs.py  mypy.ini  (+15 more)
.github/: dependabot.yml
.github/workflows/: Future.yml  alpine-test.yml  codeql.yml  cygwin-test.yml  dependencies.yml  lint.yml  pythonpackage.yml  test_pytest.yml
.mypy_cache/3.8/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  abc.data.json  abc.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  binascii.data.json  binascii.meta.json  builtins.data.json  builtins.meta.json  calendar.data.json  calendar.meta.json  codecs.data.json  codecs.meta.json  configparser.data.json  configparser.meta.json  contextlib.data.json  contextlib.meta.json  datetime.data.json  datetime.meta.json  decimal.data.json  decimal.meta.json  enum.data.json  enum.meta.json  fnmatch.data.json  fnmatch.meta.json  functools.data.json  functools.meta.json  gc.data.json  gc.meta.json  (+58 more)
doc/: Makefile  conf.py  index.rst  intro.rst  reference.rst  requirements.txt  roadmap.rst  tutorial.rst  tutorial.txt  whatsnew.rst
doc/doc_index/: index.html
doc/source/: changes.rst  conf.py  index.rst  intro.rst  quickstart.rst  reference.rst  roadmap.rst  tutorial.rst  whatsnew.rst
etc/sublime-text/: git-python.sublime-project
fuzzing/: README.md
fuzzing/dictionaries/: fuzz_blob.dict  fuzz_config.dict  fuzz_tree.dict
fuzzing/fuzz-targets/: fuzz_blob.py  fuzz_config.py  fuzz_diff.py  fuzz_repo.py  fuzz_submodule.py  fuzz_tree.py  utils.py
fuzzing/local-dev-helpers/: Dockerfile
fuzzing/oss-fuzz-scripts/: build.sh  container-environment-bootstrap.sh
git/: __init__.py  base.py  cmd.py  compat.py  config.py  db.py  diff.py  exc.py  fun.py  odict.py  pack.py  remote.py  repo.py  stream.py  typ.py  types.py  util.py
git/compat/: __init__.py  typing.py
git/db/: __init__.py  compat.py  complex.py  interface.py
git/index/: __init__.py  base.py  fun.py  typ.py  util.py
git/objects/: __init__.py  base.py  blob.py  commit.py  fun.py  remote.py  tag.py  tree.py  util.py  util.py.97f6472e9bbb12cad7bbab8f367a99fe.tmp
git/refs/: __init__.py  head.py  headref.py  log.py  reference.py  remote.py  symbolic.py  tag.py
git/repo/: __init__.py  base.py  fun.py
git/scripts/: ssh_wrapper.sh
git/test/: __init__.py  test_actor.py  test_base.py  test_blob.py  test_cmd.py  test_commit.py  test_config.py  test_db.py  test_diff.py  test_docs.py  test_example.py  test_exc.py  test_fail.py  test_fun.py  test_git.py  test_import.py  test_index.py  test_pack.py  test_reflog.py  test_refs.py  test_remote.py  test_repo.py  test_stats.py  test_stream.py  test_submodule.py  test_tree.py  test_util.py
gitdb/: .coveragerc  .gitignore  .gitmodules  MANIFEST.in  Makefile  README.rst  SECURITY.md  build-release.sh  gitdb.pro  requirements.txt  setup.py  stream.py
gitdb/.github/: dependabot.yml
gitdb/doc/: Makefile
gitdb/gitdb/: __init__.py  pack.py
gitdb/test/: test_stream.py
index/: __init__.py  base.py  fun.py  util.py
lib/git/: __init__.py  actor.py  base.py  blob.py  cmd.py  commit.py  config.py  db.py  diff.py  errors.py  exc.py  gitter.py  head.py  index.py  lazy.py  method_missing.py  refs.py  remote.py  repo.py  stats.py  submodule.py  tag.py  tree.py  util.py  utils.py
lib/git_python/: __init__.py  actor.py  blob.py  commit.py  diff.py  errors.py  git.py  head.py  lazy.py  method_missing.py  repo.py  stats.py  tag.py  tree.py  utils.py
objects/: __init__.py  base.py  commit.py  tag.py  tree.py  util.py
objects/submodule/: base.py  root.py
refs/: __init__.py  head.py  log.py  reference.py  remote.py  symbolic.py  tag.py
repo/: base.py  fun.py
scripts/: ssh_wrapper.py
smmap/: .coveragerc  .gitignore  MANIFEST.in  Makefile  README.md  SECURITY.md  setup.cfg  setup.py  tox.ini
smmap/doc/: .gitignore  Makefile  make.bat
smmap/smmap/: __init__.py
test/: __init__.py  conftest.py  helper.py  test_actor.py  test_autointerrupt.py  test_base.py  test_blob.py  test_blob_filter.py  test_clone.py  test_commit.py  test_config.py  test_db.py  test_diff.py  test_docs.py  test_exc.py  test_fixture_health.py  test_fun.py  test_git.py  test_imports.py  test_index.py  test_installation.py  test_quick_doc.py  test_reflog.py  test_refs.py  test_remote.py  test_repo.py  test_rev_parse.py  test_stats.py  test_submodule.py  test_tree.py  test_util.py  testrunner.py  tstrunner.py
test/deprecation/: __init__.py  lib.py  test_attributes.py  test_basic.py  test_cmd_git.py  test_compat.py  test_toplevel.py  test_types.py  test_various.py
test/fixtures/: .gitconfig  blame  diff_2  diff_copied_mode_raw  diff_file_with_colon  diff_index_patch  diff_new_mode  diff_numstat  diff_p  env_case.py  for_each_ref  for_each_ref_tags  for_each_ref_with_path_component  git_config  git_config_defaults  git_config_global  git_config_multiple  git_config_with_empty_quotes  git_config_with_empty_value  git_config_with_extra_whitespace  git_config_with_quotes  git_config_with_quotes_escapes  git_config_with_quotes_whitespace  git_config_with_quotes_whitespace_outside  polyglot  rev_list  rev_list_bisect_all  rev_list_commit_diffs  rev_list_commit_idabbrev  rev_list_commit_stats
test/git/: .directory  __init__.py  test_actor.py  test_base.py  test_blob.py  test_commit.py  test_config.py  test_diff.py  test_fun.py  test_git.py  test_head.py  test_index.py  test_odb.py  (+9 more)
(+347 files in other folders)
