[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=git --cov-report=term --disable-warnings -ra"
filterwarnings = "ignore::DeprecationWarning"
python_files = "test_*.py"
tmp_path_retention_policy = "failed"
testpaths = "test"  # Space separated list of paths from root e.g test tests doc/testing.
# --cov   coverage
# --cov-report term  # send report to terminal term-missing -> terminal with line numbers  html  xml
# --cov-report term-missing # to terminal with line numbers
# --cov-report html:path  # html file at path
# --maxfail  # number of errors before giving up
# -disable-warnings  # Disable pytest warnings (not codebase warnings)
# -rfE  # default test summary: list fail and error
# -ra   # test summary: list all non-passing (fail, error, skip, xfail, xpass)
# --ignore-glob=**/gitdb/*  # ignore glob paths
# filterwarnings ignore::WarningType  # ignores those warnings

[tool.mypy]
python_version = "3.7"
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
# warn_unused_ignores = true
warn_unreachable = true
show_error_codes = true
implicit_reexport = true
# strict = true

# TODO: Remove when 'gitdb' is fully annotated.
exclude = ["^git/ext/gitdb"]
[[tool.mypy.overrides]]
module = "gitdb.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["git"]

[tool.coverage.report]
include = ["*/git/*"]
omit = ["*/git/ext/*"]

[tool.black]
line-length = 120
target-version = ["py37"]
extend-exclude = "git/ext/gitdb"
